fix: overflow-x

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,7 +11,9 @@
 @tailwind utilities;
 
 body{
+  width: 100vw;
   height: 100vh;
+  overflow-x: hidden;
   background-color: #181818;
 }
 
